Fix search field visibility on smaller screens

--- a/src/Store/Web/Server/wwwroot/css/app.css
+++ b/src/Store/Web/Server/wwwroot/css/app.css
@@ -148,4 +148,8 @@ h1:focus {
         flex: 0 0 auto;
         width: 100%;
     }
+
+    .d-sm-md-block {
+        display: block!important;
+    }
 }
